# VoronoiX2

./: .gitignore  README.md
cpp/: CMakeLists.txt  main.cpp
cpp/include/vx/: core.hpp  utils.hpp
cpp/include/vx/algo/: alg_convex_hull.hpp  alg_convex_hull_2d.hpp  alg_convex_hull_kd.hpp  alg_delaunay_2d.hpp  alg_voronoi_2d.hpp  graph_delaunay.hpp  graph_voronoi.hpp  vx_builder_2d.hpp  vx_graph.hpp
cpp/include/vx/geometry/: halfspace.hpp  matrix.hpp  polyhedron.hpp  vector.hpp
cpp/include/vx/math/: geometry.hpp  mat.hpp  qhull.hpp  vec.hpp
cpp/include/vx/model/: graph.hpp
cpp/src/: core.cpp
